--- a/exemplo2.html
+++ b/exemplo2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>O código exibe lista com bolinhas pretam, nao numerada</h3>
+    <h3>O código exibe lista com bolinhas pretas, nao numerada</h3>
     <ul>
         <li> maçãs </li>
         <li> bananas </li>
