--- a/ativ-1.html
+++ b/ativ-1.html
@@ -19,7 +19,7 @@
         <li> Apontador </li>
     </ul>
 
-    <h3>lista mostra quais materia deve ter por aluno </h3>
+    <h3>Lista mostra quais materia deve ter por aluno </h3>
     <ol>
         <li> Lapis de cor </li>
         <li> Duas canetas </li>
@@ -40,7 +40,7 @@
         <li> 3A </li>
     </ol>
 
-    <h3>lista com materiais opcionais</h3>
+    <h3>Lista com materiais opcionais</h3>
     <ol type="I">
         <li> Marcadores coloridos </li>
         <li> Post-its </li>
@@ -62,7 +62,7 @@
         <dd>Entrar somente com o Prof</dd>
     </dl>
 
-    <h3>A lista abaixo mostra o que não é liberado na escola </h3>
+    <h3>A lista abaixo mostra algumas instruções </h3>
     <ul>
         <li>Sala de aula:</li>
         <ul>
