--- a/ativ_form_tab.html
+++ b/ativ_form_tab.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cadastro de Fornecedor</title>
+  <link rel="stylsheet" type="text/css" href="ativ_form_tab/css" media="all">
 </head>
 <body>
 
