Nova versão de CSS

--- a/ativ_form_tab.html
+++ b/ativ_form_tab.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cadastro de Fornecedor</title>
 </head>
-<link rel="stylsheet" type="text/css" href="ativ_form_tab/css" media="all">
+<link rel="stylesheet" href="ativ_form_tab/css/style.css">
 
 <body>
 
   <form action="#" method="post">
-    <fieldset>0
+    <fieldset>
       <legend>INFORMAÇÕES DO FORNECEDOR</legend>
 
       <!-- Logo e título alinhados dentro do formulário -->
