--- a/evento2_js.html
+++ b/evento2_js.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>troca de imagem com Mouse IN/OUT</title>
-    <script source>"event.js"</script>
+    <script src="evento.js" ></script>
 </head>
 <body>
     <img alt="cat" src="download (5).jpg" name="imagem"
