--- a/ativ_form_tab.html
+++ b/ativ_form_tab.html
@@ -6,6 +6,8 @@
   <title>Cadastro de Fornecedor</title>
 </head>
 <link rel="stylesheet" href="ativ_form_tab/css/style.css">
+<script src="validacao.js"></script>
+
 
 <body>
 
@@ -74,6 +76,7 @@
         Tatiane Vieira / Estudante / Tecnico em Deenvolvimento de Sistemas
     </address>
 </center>
+
 
 </body>
 </html>
